--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,7 +15,7 @@
 <p>1</p>
 <p>1</p>
     <a hraf="">
-      <img src="" alr=""/>
+      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alr=""/>
     </a>
   </body>
 </html>
