--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head></head>
   <body>
     <h1>
       Hi
@@ -14,8 +15,8 @@
 <p>1</p>
 <p>1</p>
 <p>1</p>
-    <a hraf="#">
-      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alr=""/>
-    </a>
+
+    
+    <a href="https://validator.w3.org"><img width="20" src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""/></a>
   </body>
 </html>
