--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
+<header>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</header>
+    <main>
+        <article>
+            <h1>My Tweets</h1>
+            <p>
+                dsds
+            </p>
+        </article>
+        <aside>
+            <p>
+                dsds
+            </p>
+        </aside>
+    </main>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <footer>
+         <a href="www.google.com" target="_blank">here</a>.
+    </footer>
 </body>
 </html>
