--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -44,9 +44,7 @@
     </main>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-    <footer>
-         <a href="www.google.com" target="_blank">here</a>.
-    </footer>
+    <footer><a href="www.google.com" target="_blank">By code this mina</a>.</footer>
 
   </body>
 </html>
