--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,50 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body>
 
-    <header>
+<head></head>
+
+<body>
+
+  <header>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-        <li><a href="contact.html">Contact</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
     </ul>
-</header>
-    <main>
-        <article>
-            <h1>My Tweets</h1>
-            <p>
-                dsds
-            </p>
+  </header>
 
-                <h1>
-      Hi
-    </h1>
-    <h2>
-      Hello
-    </h2>
-    <h3>
-      Welcome
-    </h3>
-<p>1</p>
-<p>1</p>
-<p>1</p>
-<p>1</p>
 
-    
-    <a href="https://validator.w3.org"><img width="20" src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""/></a>
-        </article>
-        <aside>
-            <p>
-                dsds
-            </p>
-        </aside>
-    </main>
-    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <main>
+    <article>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a
+            href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a
+          href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </blockquote>
+    </article>
+    <aside>
+      <p>
+        placeholder to add comment thread later
+      </p>
+    </aside>
+  </main>
 
-    <footer><a href="www.google.com" target="_blank">By code this mina</a>.</footer>
+  
 
-  </body>
+  <footer><a href="www.google.com" target="_blank">By code this mina</a>.</footer>
+
+</body>
+
 </html>
