--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,41 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tweets Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Index Page</title>
 </head>
-
 <body>
-    <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
-    </header>
-    <main>
-        <article>
-            <h1>My Tweets</h1>
-            <p>Here you can see some embedded tweets or text simulating tweets.</p>
-            <!-- Example Tweet Embed -->
-            <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a
-                        href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a
-                    href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7,
-                    2023</a>
-            </blockquote>
-        </article>
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
-    <footer>
-        <p>Made by Mina Gerges - <a href="https://github.com/mina-gerguis" target="_blank">here</a></p>
-    </footer>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  <main>
+    <article>
+      <h1>Welcome to My Portfolio</h1>
+      <p>This is the main content of the index page.</p>
+      <img src="profile.jpg" alt="My Profile Picture">
+
+      <!-- Learners Table -->
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- End Learners Table -->
+
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer>
+    <p>Made by Mina Gerges - <a href="https://github.com/mina-gerguis" target="_blank">here</a></p>
+  </footer>
 </body>
-
 </html>
-
-
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
